# formal-system

./: CMakeLists.txt  README.md
data/: in.txt
module/: formal.system.ixx
src/: main.cxx
